# YOLO-Modell-training

./: .gitignore  README.md
YOLO-Modell/: README.md  YAML_erstellen.py  datasplit.py  main.py  pyproject.toml  train_modell.py
YOLO-Modell/python3.11/: pyvenv.cfg
YOLO-Modell/python3.11/Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu
YOLO-Modell/yolo_modell.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
