[project]
name = "yolo-modell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.13.0.92",
    "ultralytics>=8.4.41",
    "label-studio>=1.11.0",
]

[tool.setuptools]
py-modules = ["main", "train_modell", "datasplit", "YAML_erstellen"]
